# jwt

./: .gitignore  Cargo.toml  README.md  requirements.txt
api/: jwt_client.py  main.py  test_jwt.py
libs/jwt/: Cargo.toml
libs/jwt/src/: lib.rs  memory.rs
libs/jwt/wasm/: rust_wasi_jwt.wasm
test/: payload.json  targets.txt
