[package]
name = "rust-wasi-jwt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use a WASM-compatible JWT library instead of jsonwebtoken
jwt-simple = "0.11.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
